# kambo-solver

./: Cargo.toml  README.md  rustfmt.toml
.cargo/: config.toml
.github/workflows/: rust.yml
kambo-core/: Cargo.toml
kambo-core/src/: algorithm.rs  lib.rs  problem.rs  solution.rs  solver.rs  state.rs  termination.rs
kambo-ga/: Cargo.toml
kambo-ga/src/: initializer.rs  lib.rs  selection.rs  utils.rs
kambo-ga/src/operators/: crossover.rs  mod.rs  mutation.rs  repair.rs  selection.rs
src/: lib.rs
