[workspace]
resolver = "3"
members = ["kambo-core", "kambo-ga"]


[workspace.lints.rust]
unsafe_code = "deny"
unsafe_op_in_unsafe_fn = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
perf = { level = "warn", priority = -1 }
box_vec = "warn"
inefficient_to_string = "warn"
manual_memcpy = "warn"
vec_init_then_push = "warn"
len_zero = "warn"
unwrap_used = "warn"
expect_used = "warn"
match_same_arms = "warn"
redundant_else = "warn"
redundant_closure_for_method_calls = "warn"
print_stdout = "warn"
print_stderr = "warn"
doc_markdown = "warn"
undocumented_unsafe_blocks = "warn"
semicolon_if_nothing_returned = "warn"
type_complexity = "allow"
too_many_arguments = "allow"
needless_lifetimes = "allow"
