[package]
name = "kambo-solver"
version = "0.1.0"
edition = "2024"

[dependencies]
kambo-core = { path = "./kambo-core" }

kambo-ga = { path = "./kambo-ga", optional = true }

[features]
default = []
ga = ["kambo-ga"]
ga-parallel = ["ga", "kambo-ga/parallel"]

[workspace]
resolver = "3"
members = ["kambo-core", "kambo-ga"]
